# LPCP-LanguageProject

./: BNF.txt  CHANGELOG.md  LPCP-LanguageProject.cabal  README.md  Statements.hs  exemplo LEEBA.txt  exemploConst.LEEBA  lexer.hs  lexer.x  parser.hs  programas para testar LEEBA  run.sh  sample.code  terminal_parsers.hs  type.hs
Lexical/: tokens_posn.x
app/: Main.hs
src/: ConditionalParsers.hs  DataType.hs  Declarations.hs  Eval.hs  Expressions.hs  Lexer.hs  Lexer.x  LogicExpressionsParser.hs  LoopParsers.hs  Parser.hs  Statements.hs  Subprograms.hs  SymTable.hs  TokenParser.hs  Type.hs
tests/: 1.leeba  2.leeba  3.leeba  4.leeba  5.leeba  6-1.leeba  6-old.leeba  6.leeba  test.leeba
